test(perf15): use Android-compatible UTF8 file APIs [perf15-observer]